<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="changing"
    tools:context=".Scientific">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/perform_scientific_calculations"
        android:textColor="#570404"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.106" />

    <EditText
        android:id="@+id/input"
        android:layout_width="216dp"
        android:layout_height="45dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_the_number"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.14" />

    <TextView
        android:id="@+id/resultsci"
        android:layout_width="181dp"
        android:layout_height="52dp"
        android:gravity="center"
        android:textColor="#012643"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/in2"
        app:layout_constraintVertical_bias="0.151" />

    <Button
        android:id="@+id/sin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.077"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultsci"
        app:layout_constraintVertical_bias="0.23" />

    <Button
        android:id="@+id/cos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.349"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultsci"
        app:layout_constraintVertical_bias="0.23" />

    <Button
        android:id="@+id/tan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.622"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultsci"
        app:layout_constraintVertical_bias="0.23" />

    <Button
        android:id="@+id/log"
        android:layout_width="85dp"
        android:layout_height="46dp"
        android:text="@string/log"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.892"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultsci"
        app:layout_constraintVertical_bias="0.228" />

    <Button
        android:id="@+id/square"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.077"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sin"
        app:layout_constraintVertical_bias="0.008" />

    <Button
        android:id="@+id/epowx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.349"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cos"
        app:layout_constraintVertical_bias="0.008" />

    <Button
        android:id="@+id/xpowy"
        android:layout_width="90dp"
        android:layout_height="46dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.626"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tan"
        app:layout_constraintVertical_bias="0.017" />

    <Button
        android:id="@+id/pi"
        android:layout_width="84dp"
        android:layout_height="44dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.899"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/log"
        app:layout_constraintVertical_bias="0.029" />

    <Button
        android:id="@+id/root"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.077"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/square"
        app:layout_constraintVertical_bias="0.017" />

    <Button
        android:id="@+id/ed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.349"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/epowx"
        app:layout_constraintVertical_bias="0.017" />

    <Button
        android:id="@+id/fact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/x"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.622"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/xpowy"
        app:layout_constraintVertical_bias="0.017" />

    <Button
        android:id="@+id/chng"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="changing"
        android:text="@string/switc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.906"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pi"
        app:layout_constraintVertical_bias="0.033" />

    <EditText
        android:id="@+id/in2"
        android:layout_width="216dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/enter_power_2nd_number"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input"
        app:layout_constraintVertical_bias="0.041"
        android:autofillHints="" />

</androidx.constraintlayout.widget.ConstraintLayout>